# solana-mpp-sdk

./: .gitattributes  .gitignore  Anchor.toml  PAYMENT_LINKS_PLAN.md  README.md  justfile  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  npm-publish.yml  report.yml
demo/: README.md
demo/app/: package.json  pnpm-lock.yaml
demo/app/src/: App.tsx  Landing.tsx  swigEndpoints.ts  wallet.ts
demo/server/: constants.ts  index.ts  package.json  pnpm-lock.yaml
demo/server/modules/: marketplace.ts  paymentlink.ts  stocks.ts  weather.ts
go/: error.go  error_test.go  expires.go  expires_test.go  go.mod  go.sum  mpp.go  store.go  store_test.go
go/client/: charge.go  charge_test.go  methods.go  transport.go  transport_test.go
go/cmd/payment-link-server/: main.go
go/internal/solanautil/: solanautil.go  solanautil_test.go
go/internal/testutil/: fakes.go  fakes_test.go
go/protocol/: solana.go  solana_test.go
go/protocol/core/: challenge.go  challenge_test.go  headers.go  headers_test.go  types.go  types_test.go
go/protocol/intents/: charge.go  charge_test.go
go/scripts/: check_coverage.sh
go/server/: defaults.go  defaults_test.go  html.go  html_test.go  methods.go  middleware.go  middleware_test.go  network_check.go  network_check_test.go  server.go  server_test.go
go/server/html/: payment-ui.gen.js  template.gen.html
html/: build.ts  package-lock.json  package.json  tsconfig.json
html/src/: main.ts  service-worker.ts
html/tests/: payment-link.test.ts  playwright.config.ts
lua/: .luacov  README.md
lua/mpp/: error.lua  expires.lua  init.lua  store.lua
lua/mpp/protocol/: solana.lua
lua/mpp/protocol/core/: challenge.lua  headers.lua  types.lua
lua/mpp/protocol/intents/: charge.lua
lua/mpp/server/: html.lua  init.lua  network_check.lua  solana_verify.lua
lua/mpp/server/html_assets/: gen.lua
lua/mpp/util/: base64url.lua  bit.lua  crypto.lua  json.lua  uint.lua
lua/scripts/: check_coverage.sh
lua/tests/: core_spec.lua  e2e-server.mjs  html_spec.lua  network_check_spec.lua  run.lua  server_spec.lua  solana_verify_spec.lua  test_helper.lua
pr/23/: index.html
programs/mpp-channel/: Cargo.toml
programs/mpp-channel/src/: ed25519.rs  errors.rs  events.rs  jcs_voucher.rs  lib.rs  state.rs
programs/mpp-channel/src/instructions/: close.rs  mod.rs  open.rs  request_close.rs  settle.rs  top_up.rs  withdraw.rs
python/: .coverage  pyproject.toml
python/examples/: payment_link_server.py
python/src/solana_mpp/: __init__.py  _base64url.py  _challenge.py  _errors.py  _expires.py  _headers.py  _types.py  store.py
python/src/solana_mpp/client/: __init__.py  charge.py  transport.py
python/src/solana_mpp/protocol/: __init__.py  intents.py  solana.py
python/src/solana_mpp/server/: __init__.py  defaults.py  middleware.py  mpp.py  network_check.py  payment_page.py
python/src/solana_mpp/server/html/: __init__.py  template.gen.html
python/tests/: conftest.py  test_base64url.py  test_challenge.py  test_client_charge.py  test_client_transport.py  test_errors.py  test_expires.py  test_headers.py  test_intents.py  test_middleware.py  test_network_check.py  test_server.py  test_server_defaults.py  test_server_html.py  test_solana_protocol.py  test_store.py  test_types.py
rust/: Cargo.toml
rust/examples/: payment_link_server.rs
rust/src/: error.rs  expires.rs  lib.rs  store.rs
rust/src/client/: charge.rs  mod.rs  session.rs
rust/src/client/solana/: charge.rs
rust/src/program/payment_channels/: mod.rs  splits_ext.rs  state.rs  voucher.rs
rust/src/protocol/: mod.rs  solana.rs
rust/src/protocol/core/: challenge.rs  headers.rs  mod.rs  types.rs
rust/src/protocol/intents/: charge.rs  mod.rs  session.rs
rust/src/protocol/methods/solana/: types.rs  verify.rs
rust/src/server/: charge.rs  html.rs  mod.rs  session.rs
rust/src/server/html/: payment_ui.gen.js  service_worker.gen.js  template.gen.html
rust/tests/: charge_integration.rs  session_l0_pda.rs
sdk/src/: Methods.ts
sdk/src/__tests__/: charge.test.ts  integration.test.ts  transactions.test.ts
sdk/src/client/: Charge.ts
sdk/src/server/: Charge.ts
sdk/src/utils/: transactions.ts
tests/interop/: conftest.py  requirements.txt  start-surfnet-proxy.mjs  test_challenge.py  test_credential.py  test_health.py  test_html.py  test_receipt.py
tests/interop/go-client/: go.mod  main.go
tests/interop/rust-client/: Cargo.toml
tests/interop/rust-client/src/: main.rs
tests/interop/ts-client/: main.ts  package-lock.json  package.json
typescript/: eslint.config.mjs  package.json  pnpm-lock.yaml  vitest.config.anchor.ts  vitest.config.ci.ts  vitest.config.ts
