[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "solana-mpp"
version = "0.1.0"
description = "Solana payment method for the Machine Payments Protocol"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "solders>=0.22",
    "solana>=0.35",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "ruff>=0.8",
    "pyright>=1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/solana_mpp"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
include = ["src", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["solana_mpp"]
branch = true

[tool.coverage.report]
fail_under = 85
show_missing = true
