[package]
name = "solana-mpp"
version = "0.2.0"
edition = "2021"
description = "Solana payment method for the Machine Payments Protocol"
license = "MIT"
repository = "https://github.com/solana-foundation/mpp-sdk"

[features]
default = ["server", "client"]
server = ["dep:tokio"]
client = ["dep:reqwest"]
gcp_kms = ["solana-keychain/gcp_kms"]

[dependencies]
# Signing — solana-keychain with sdk-v3 (fix/deps branch pins solana-signature <3.3)
solana-keychain = { git = "https://github.com/solana-foundation/solana-keychain", rev = "658bdefa", default-features = false, features = ["memory", "sdk-v3"] }

# Solana — atomic crates only
solana-hash = { version = "3.1", default-features = false }
solana-instruction = { version = "3.1", default-features = false }
solana-message = { version = "3.0", default-features = false }
solana-pubkey = { version = "3.0", default-features = false }
solana-commitment-config = { version = "3.0", default-features = false }
solana-rpc-client = { version = "3.1", default-features = false }
solana-signature = { version = "3.1", default-features = false, features = ["default"] }
solana-system-interface = { version = "2.0", default-features = false }
solana-transaction = { version = "3.0", default-features = false }
solana-transaction-status = { version = "3.1", default-features = false }

# Async
tokio = { version = "1", features = ["full"], optional = true }

# HTTP client
reqwest = { version = "0.12", features = ["json"], optional = true }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_json_canonicalizer = "0.3"
bs58 = "0.5"
base64 = "0.22"
bincode = "1"

# Crypto (HMAC challenge IDs)
hmac = "0.12"
sha2 = "0.10"

# Time (expiration, timestamps)
time = { version = "0.3", features = ["formatting", "parsing"] }

# Observability
tracing = "0.1"

# Errors
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
surfpool-sdk = { git = "https://github.com/solana-foundation/surfpool", rev = "3dcb436" }
