[package]
name = "solana-mpp"
version = "0.2.0"
edition = "2021"
description = "Solana payment method for the Machine Payments Protocol"
license = "MIT"
repository = "https://github.com/solana-foundation/mpp-sdk"

[features]
default = ["server", "client"]
server = ["dep:tokio"]
client = ["dep:reqwest"]
gcp_kms = ["solana-keychain/gcp_kms"]
# Pull-mode session support via the multi-delegator program. Not supported in v1.
# The code compiles under this flag but is untested and undocumented.
pull-mode = []

[dependencies]
# Signing — solana-keychain with sdk-v3 (fix/deps branch pins solana-signature <3.3)
solana-keychain = { git = "https://github.com/solana-foundation/solana-keychain", rev = "abf75944", default-features = false, features = ["memory", "sdk-v3"] }

# Solana — atomic crates only
solana-hash = { version = "3.1", default-features = false }
solana-instruction = { version = "3.1", default-features = false }
solana-message = { version = "3.0", default-features = false }
solana-pubkey = { version = "3.0", default-features = false }
solana-address = { version = "2", default-features = false, features = ["borsh"] }
solana-commitment-config = { version = "3.0", default-features = false }
solana-rpc-client = { version = "3.1", default-features = false }
solana-signature = { version = "3.1", default-features = false, features = ["default"] }
solana-system-interface = { version = "2.0", default-features = false }
solana-transaction = { version = "3.0", default-features = false }
solana-transaction-status = { version = "3.1", default-features = false }

# Added for payment-channels session (X3 fix). These crates are used only by the
# session module. `rust/src/client/charge.rs` still hand-rolls its own blocking
# RPC client, hand-rolled ComputeBudget ixs (lines 182-201, 501-527), and
# hardcoded program IDs (lines 182-193). Aligning `charge.rs` with these new
# deps is deferred as tech debt (see the "Follow-up: align charge.rs" note).
# Tracking issue: TBD.
solana-client = { version = "3.1", default-features = false }            # nonblocking::rpc_client::RpcClient, rpc_config::RpcAccountInfoConfig
solana-sdk-ids = { version = "3.1", default-features = false }           # ed25519_program, sysvar::instructions
solana-ed25519-program = { version = "3.0", default-features = false }   # canonical builder for the ed25519 precompile instruction (extracted out of solana-sdk on the 3.x track)
solana-compute-budget-interface = { version = "3.0", default-features = false }  # ComputeBudgetInstruction builder (highest published 3.x is 3.0.0)
spl-token = { version = "8", default-features = false }                  # classic SPL Token Program ID (v1: Token-2022 rejected at process_open)
spl-token-2022 = { version = "8" }                                       # Token-2022 program ID, imported ONLY so the S3-M5 mint-owner check rejects it. Defaults required: v8 fails to compile with default-features = false (confidential_mint_burn references zk-ops-gated fn unconditionally).
spl-associated-token-account-client = { version = "2", default-features = false }  # create_associated_token_account_idempotent (highest published is 2.0.0)

# Upstream Codama-generated client for payment_channels. Pinned by rev; Cargo.lock
# records the resolved revision. The `fetch` feature enables the optional
# solana-client RPC helpers that `fetch_channel` / `fetch_maybe_channel` depend
# on; leave it on by default.
#
# NOTE (rustc floor): `clients/rust/Cargo.toml` upstream declares
# `edition = "2024"`, which requires rustc `>= 1.85`. Adding this dep raises
# the SDK workspace's effective rustc floor to 1.85 transitively. If CI pins
# an older toolchain, bump it alongside this dep; otherwise `cargo check`
# fails with an "edition 2024 is unstable" style error before any SDK code
# runs.
payment_channels_client = { git = "https://github.com/Moonsong-Labs/solana-payment-channels.git", rev = "2a222f7d37b665aa948064dd2aa83ee11b4d9b43", features = ["fetch"] }

# Async
tokio = { version = "1", features = ["full"], optional = true }

# HTTP client
reqwest = { version = "0.12", features = ["json"], optional = true }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_json_canonicalizer = "0.3"
bs58 = "0.5"
base64 = "0.22"
bincode = "1"
borsh = { version = "1", default-features = false, features = ["derive"] }

# Crypto (HMAC challenge IDs + distribution hash + voucher verification)
hmac = "0.12"
sha2 = "0.10"
blake3 = "1"
ed25519-dalek = { version = "2", default-features = false, features = ["alloc"] }

# Time (expiration, timestamps)
time = { version = "0.3", features = ["formatting", "parsing"] }

# Observability
tracing = "0.1"

# Errors
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
surfpool-sdk = { git = "https://github.com/solana-foundation/surfpool", rev = "3dcb436" }
serial_test = "3"

# Dev-only: `solana-sdk` 3.x provides `Keypair`, `Transaction`, and other
# umbrella re-exports used by the L1 integration tests. Pinned at 3.0
# (highest published 3.x on crates.io) rather than the 3.1 atomic-crate
# track to keep the umbrella release tip aligned.
solana-sdk = { version = "3.0", default-features = false }
# `ed25519-dalek` is already declared in [dependencies] above (used by the
# voucher verification path), so it is not re-declared here.
