[package]
name = "mpp-interop-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
solana-mpp = { path = "../../../rust" }
solana-keychain = { git = "https://github.com/solana-foundation/solana-keychain", rev = "abf75944", default-features = false, features = ["memory"] }
solana-rpc-client = "3.1"
solana-signature = "3.1"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
